--- a/index.html
+++ b/index.html
@@ -12,28 +12,31 @@
 </head>
 
 <body>
-    <h1>Communication system Lecture Series</h1>
-    <div class="lecture"><a href="https://youtu.be/rSykZTos5ac">Introduction | L : 1 | Communication Systems | Impulse Batch | GATE/ESE 2022 Exams</a></div>
-    <div class="lecture"><a href="https://youtu.be/53UjU027qLA">Review of Fourier Transform | L:2 | Communication Systems | Impulse Batch | GATE/ESE 2022 Exams</a></div>
-    <div class="lecture"><a href="https://youtu.be/cWQ0FASLBQQ">Reference Books | L:3 | Communication Systems | Impulse Batch | GATE/ESE 2022 Exams</a></div>
-    <div class="lecture"><a href="https://www.youtube.com/watch?v=9qtl-EdlL0g">Oldest Broadcasting - 1 | L:4 | Communication Systems | Impulse Batch | GATE/ESE 2022 Exams</a></div>
-    <div class="lecture"><a href="https://www.youtube.com/watch?v=8HH5ufFfRFI">Oldest Broadcasting - 2 | L:5 | Communication Systems | Impulse Batch | GATE/ESE 2022 Exams</a></div>
-    <div class="lecture"><a href="https://www.youtube.com/watch?v=-V62ous9mvQ">Oldest Broadcasting - 3 | L:6 | Communication Systems | Impulse Batch | GATE/ESE 2022 Exams</a></div>
-    <div class="lecture"><a href="https://www.youtube.com/watch?v=gYjBEEqVjSc">Problems On AM | L:7 | Communication Systems | Impulse Batch | GATE/ESE 2022 Exams</a></div>
-    <div class="lecture"><a href="https://www.youtube.com/watch?v=1UMN8jjbPAU">Square Law Modulator | L:8 | Communication Systems | Impulse Batch | GATE/ESE 2022 Exams</a></div>
-    <div class="lecture"><a href="https://www.youtube.com/watch?v=PwH723a_2pw">Switching Modulator | L:9 | Communication Systems | Impulse Batch | GATE/ESE 2022 Exams                                                                                                                                                              </a></div>
-    <div class="lecture"><a href="https://www.youtube.com/watch?v=QeD1rXLx850">Wave Forms of AM | L:10 | Communication Systems | Impulse Batch | GATE/ESE 2022 Exams</a></div>
-    <div class="lecture"><a href="https://www.youtube.com/watch?v=INryNnGW5bQ">Envelope Detector | L:11 | Communication Systems | Impulse Batch | GATE/ESE 2022 Exams</a></div>
-    <div class="lecture"><a href="https://www.youtube.com/watch?v=Nk6E4_Ttf74">Synchronous Detector | L:12 | Communication Systems | Impulse Batch | GATE/ESE 2022 Exams</a></div>
-    <div class="lecture"><a href="https://www.youtube.com/watch?v=3p-1vi-6i8E">Problems - 1 | L:13 | Communication Systems | Impulse Batch | GATE/ESE 2022 Exams</a></div>
-    <div class="lecture"><a href="https://www.youtube.com/watch?v=xMLrIBHXZmQ">REVISION - 1 | Marathon Session | L:14 | Communication Systems | Impulse Batch | GATE/ESE 2022 Exams</a></div>
-    <div class="lecture"><a href="https://www.youtube.com/watch?v=riX_RdOm5Rw">REVISION - 2 (Marathon Session) | L:15 | Communication Systems | Impulse Batch | GATE/ESE 2022 Exams</a></div>
-    <div class="lecture"><a href="https://www.youtube.com/watch?v=v8tRIQcr9fw">REVISION - 3 (Marathon Session) | L:16 | Communication Systems | Impulse Batch | GATE/ESE 2022</a></div>
-    <div class="lecture"><a href="https://www.youtube.com/watch?v=NB-xEMUiARA">REVISION - 4 | Marathon Session | L:17 | Communication Systems | Impulse Batch | GATE/ESE 2022 Exams</a></div>
-    <div class="lecture"><a href="https://www.youtube.com/watch?v=08l2u-1S9J0">PROBLEMS -2 | L:18 | Communication Systems | Impulse Batch | GATE/ESE 2022 Exams</a></div>
-    <div class="lecture"><a href="https://www.youtube.com/watch?v=x9yNpTYujV8">DSB-SC | L:19 | Communication Systems | Impulse Batch | GATE/ESE 2022 Exams</a></div>
-    <div class="lecture"><a href="https://www.youtube.com/watch?v=IASt56wIy3A&t=1304s">Generation of DSB-SC | L:20 | Communication Systems | Impulse Batch | GATE/ESE 2022 Exams</a></div>
+    <div class="head"> 
+        <h1>Communication System</h1>
+        <h1>lecture series</h1>
+    </div>
 
+    <button><a href="https://youtu.be/rSykZTos5ac" target="_blank">Lecture 1</a></button>
+    <button><a href="https://youtu.be/53UjU027qLA" target="_blank">Lecture 2</a></button>
+    <button><a href="https://youtu.be/cWQ0FASLBQQ" target="_blank">Lecture 3</a></button>
+    <button><a href="https://www.youtube.com/watch?v=9qtl-EdlL0g" target="_blank">Lecture 4</a></button>
+    <button><a href="https://www.youtube.com/watch?v=8HH5ufFfRFI" target="_blank">Lecture 5</a></button>
+    <button><a href="https://www.youtube.com/watch?v=-V62ous9mvQ" target="_blank">Lecture 6</a></button>
+    <button><a href="https://www.youtube.com/watch?v=gYjBEEqVjSc" target="_blank">Lecture 7</a></button>
+    <button><a href="https://www.youtube.com/watch?v=1UMN8jjbPAU" target="_blank">Lecture 8</a></button>
+    <button><a href="https://www.youtube.com/watch?v=PwH723a_2pw" target="_blank">Lecture 9</a></button>
+    <button><a href="https://www.youtube.com/watch?v=QeD1rXLx850" target="_blank">Lecture 10</a></button>
+    <button><a href="https://www.youtube.com/watch?v=INryNnGW5bQ" target="_blank">Lecture 11</a></button>
+    <button><a href="https://www.youtube.com/watch?v=Nk6E4_Ttf74" target="_blank">Lecture 12</a></button>
+    <button><a href="https://www.youtube.com/watch?v=3p-1vi-6i8E" target="_blank">Lecture 13</a></button>
+    <button><a href="https://www.youtube.com/watch?v=xMLrIBHXZmQ" target="_blank">Lecture 14</a></button>
+    <button><a href="https://www.youtube.com/watch?v=riX_RdOm5Rw" target="_blank">Lecture 15</a></button>
+    <button><a href="https://www.youtube.com/watch?v=v8tRIQcr9fw" target="_blank">Lecture 16</a></button>
+    <button><a href="https://www.youtube.com/watch?v=NB-xEMUiARA" target="_blank">Lecture 17</a></button>
+    <button><a href="https://www.youtube.com/watch?v=08l2u-1S9J0" target="_blank">Lecture 18</a></button>
+    <button><a href="https://www.youtube.com/watch?v=x9yNpTYujV8" target="_blank">Lecture 19</a></button>
+    <button><a href="https://www.youtube.com/watch?v=IASt56wIy3A&t=1304s" target="_blank">Lecture 20</a></button>
 </body>
-
+<footer></footer>
 </html>
