--- a/index.html
+++ b/index.html
@@ -46,7 +46,20 @@
     <button><a href="https://www.youtube.com/watch?v=_TiO4TnqDp8" target="_blank">Lecture 27</a></button>
     <button><a href="https://www.youtube.com/watch?v=YRkXcr8XLqs" target="_blank">Lecture 28</a></button>
     <button><a href="https://www.youtube.com/watch?v=Iz3K5pQiK-Y" target="_blank">Lecture 29</a></button>
-    
+    <button><a href="https://www.youtube.com/watch?v=sygiMQPpC-8&t=3835s" target="_blank" >Lecture 30</a></button>
+    <button><a href="https://www.youtube.com/watch?v=slBpt-5qC7Y" target="_blank" >Lecture 31</a></button>
+    <button><a href="https://www.youtube.com/watch?v=XGhteZCzslk" target="_blank" >Lecture 32</a></button>
+    <button><a href="https://www.youtube.com/watch?v=N-9_Sa7Msz4" target="_blank" >Lecture 33</a></button>
+    <button><a href="https://www.youtube.com/watch?v=qO05epNabXY" target="_blank" >Lecture 34</a></button>
+    <button><a href="https://www.youtube.com/watch?v=wcodPwTa7eA" target="_blank" >Lecture 35</a></button>
+    <button><a href="https://www.youtube.com/watch?v=CESoNa07QDc" target="_blank" >Lecture 36</a></button>
+    <button><a href="https://www.youtube.com/watch?v=s_WimeM2NWM" target="_blank" >Lecture 37</a></button>
+    <button><a href="https://www.youtube.com/watch?v=LCbggabkMrA" target="_blank" >Lecture 38</a></button>
+    <button><a href="https://www.youtube.com/watch?v=fOPlEP3nQOE" target="_blank" >Lecture 39</a></button>
+    <button><a href="https://www.youtube.com/watch?v=VfpHaVCqFqU" target="_blank" >Lecture 40</a></button>
+    <button><a href="https://www.youtube.com/watch?v=ZwflD5GzXJA&t=2789s" target="_blank" >Lecture 41</a></button>
+    <button><a href="https://www.youtube.com/watch?v=rbJVknnWlAo" target="_blank" >Lecture 42</a></button>
+    <button><a href="https://www.youtube.com/watch?v=hh8btRVfKTg" target="_blank" >Lecture 43</a></button>
 </body>
 <footer></footer>
 </html>
