--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+       
     <ul class="nav-bar">
         <li class="nav-con active"><a href="#first">ANALOG ELECTRONICS</a></li>
         <li class="nav-con"><a href="#second">COMMUNICATION SYSTEM</a></li>
@@ -18,6 +19,7 @@
         <li class="nav-con"><a href="#fivth">ELECTRONICS DEVICE</a></li>
         <li class="nav-con"><a href="#sixth">ENG. MATHEMATICS</a></li>
         <li class="nav-con"><a href="#seventh">CONTROL SYSTEM</a></li>
+        <li class="nav-con"><a href="#eighth">SIGNAL AND SYSTEM</a></li>
     </ul>
     <!-- analog circuit -->
     <div id="first" style="visibility: hidden;">first</div>
@@ -727,7 +729,53 @@
         <button><a href="https://unacademy.com/class/control-system-for-eceee-for-gate-2021-session-46/LHSQTDXD" target="_blank">Lecture 47</a></button>
         <button><a href="https://unacademy.com/class/control-system-for-eceee-for-gate-2021-session-47/28IWNZOU" target="_blank">Lecture 48</a></button>
     </div>
-
+        <!-- signal and system -->
+        <div id="eighth" style="visibility: hidden; margin-bottom: 74px;">eighth</div>
+        <div id="signal">
+                <h1>Signal and System</h1>
+                <button><a href="https://www.youtube.com/watch?v=_xFwa6erCvk&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=1" target="_blank" >Lecture 1</a></button>
+                <button><a href="https://www.youtube.com/watch?v=5IN8tj7NXbc&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=2" target="_blank" >Lecture 2</a></button>
+                <button><a href="https://www.youtube.com/watch?v=RuIEvXGQIy0&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=3" target="_blank" >Lecture 3</a></button>
+                <button><a href="https://www.youtube.com/watch?v=UU_nYoZqOu0&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=4" target="_blank" >Lecture 4</a></button>
+                <button><a href="https://www.youtube.com/watch?v=XFeW1JYQQE8&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=5" target="_blank" >Lecture 5</a></button>
+                <button><a href="https://www.youtube.com/watch?v=RlkKzHcN3C0&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=6" target="_blank" >Lecture 6</a></button>
+                <button><a href="https://www.youtube.com/watch?v=-SPRmNNADTM&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=7" target="_blank" >Lecture 7</a></button>
+                <button><a href="https://www.youtube.com/watch?v=tAA0ayO-e80&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=8" target="_blank" >Lecture 8</a></button>
+                <button><a href="https://www.youtube.com/watch?v=wBoQnhaB7qs&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=9" target="_blank" >Lecture 9</a></button>
+                <button><a href="https://www.youtube.com/watch?v=h4M60XabKmI&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=10" target="_blank" >Lecture 10</a></button>
+                <button><a href="https://www.youtube.com/watch?v=FwD7Pn-7S1Y&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=11" target="_blank" >Lecture 11</a></button>
+                <button><a href="https://www.youtube.com/watch?v=uKztgXnVUWc&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=12" target="_blank" >Lecture 12</a></button>
+                <button><a href="https://www.youtube.com/watch?v=EEYTge38_5E&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=13" target="_blank" >Lecture 13</a></button>
+                <button><a href="https://www.youtube.com/watch?v=CdOFYxx-T_4&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=15" target="_blank" >Lecture 14</a></button>
+                <button><a href="https://www.youtube.com/watch?v=_UJSjS6fYUk&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=16" target="_blank" >Lecture 15</a></button>
+                <button><a href="https://www.youtube.com/watch?v=oPMRXAd1moM&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=17" target="_blank" >Lecture 16</a></button>
+                <button><a href="https://www.youtube.com/watch?v=grP4Jl3jPgo&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=18" target="_blank" >Lecture 17</a></button>
+                <button><a href="https://www.youtube.com/watch?v=wTHzCJyPtI8&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=19" target="_blank" >Lecture 18</a></button>
+                <button><a href="https://www.youtube.com/watch?v=fQYr_cxazQQ&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=20" target="_blank" >Lecture 19</a></button>
+                <button><a href="https://www.youtube.com/watch?v=R7OyM8mr5ck&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=21" target="_blank" >Lecture 20</a></button>
+                <button><a href="https://www.youtube.com/watch?v=I20Fcz_vzG4&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=22" target="_blank" >Lecture 21</a></button>
+                <button><a href="https://www.youtube.com/watch?v=7dg8uk7Mme8&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=23" target="_blank" >Lecture 22</a></button>
+                <button><a href="https://www.youtube.com/watch?v=VYaxUz-uPWI&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=25" target="_blank" >Lecture 23</a></button>
+                <button><a href="https://www.youtube.com/watch?v=8jxZahP1OTI&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=26" target="_blank" >Lecture 24</a></button>
+                <button><a href="https://www.youtube.com/watch?v=w7RNTmoxD_Y&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=27" target="_blank" >Lecture 25</a></button>
+                <button><a href="https://www.youtube.com/watch?v=3BFq8MJ5-I0&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=28" target="_blank" >Lecture 26</a></button>
+                <button><a href="https://www.youtube.com/watch?v=STD1iLIibOQ&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=29" target="_blank" >Lecture 27</a></button>
+                <button><a href="https://www.youtube.com/watch?v=479NslPEfo8&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=31" target="_blank" >Lecture 28</a></button>
+                <button><a href="https://www.youtube.com/watch?v=BZOX0RDGino&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=32" target="_blank">Lecture 29</a></button>
+                <button><a href="https://www.youtube.com/watch?v=QS6VYhlJebE&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=33" target="_blank">Lecture 30</a></button>
+                <button><a href="https://www.youtube.com/watch?v=N3-XozDmZO4&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=34" target="_blank">Lecture 31</a></button>
+                <button><a href="https://www.youtube.com/watch?v=6AK9KqTef_4&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=35" target="_blank">Lecture 32</a></button>
+                <button><a href="https://www.youtube.com/watch?v=heWE-trKtvc&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=37" target="_blank">Lecture 33</a></button>
+                <button><a href="https://www.youtube.com/watch?v=0BmpFpXVD1o&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=38" target="_blank">Lecture 34</a></button>
+                <button><a href="https://www.youtube.com/watch?v=-KCoQdfvnio&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=39" target="_blank">Lecture 35</a></button>
+                <button><a href="https://www.youtube.com/watch?v=xfS3k2bI5l8&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=41" target="_blank">Lecture 36</a></button>
+                <button><a href="https://www.youtube.com/watch?v=3qcKgzEAgAw&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=42" target="_blank">Lecture 37</a></button>
+                <button><a href="" target="_blank">Lecture 38</a></button>
+                <button><a href="" target="_blank">Lecture 39</a></button>
+                <button><a href="" target="_blank">Lecture 40</a></button>
+                <button><a href="" target="_blank">Lecture 41</a></button>
+                <button><a href="" target="_blank">Lecture 42</a></button>
+        </div>
     <script type="text/javaScript" src="script.js"></script>
 </body>
 
