--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li class="nav-con"><a href="#second">COMMUNICATION SYSTEM</a></li>
         <li class="nav-con"><a href="#third">NETWORK THEORY</a></li>
         <li class="nav-con"><a href="#fourth">DIGITAL ELECTRONICS</a></li>
-        <li class="nav-con"><a href="#fivth">ELECTRONICS DEVICE</a></li>
+        <li class="nav-con"><a href="#fifth">ELECTRONICS DEVICE</a></li>
         <li class="nav-con"><a href="#sixth">ENG. MATHEMATICS</a></li>
         <li class="nav-con"><a href="#seventh">CONTROL SYSTEM</a></li>
         <li class="nav-con"><a href="#eighth">SIGNAL AND SYSTEM</a></li>
@@ -512,7 +512,7 @@
     </div>
 
     <!-- Electronics device -->
-    <div id="fivth" style="visibility:hidden; margin-bottom: 74px;">fivth</div>
+    <div id="fifth" style="visibility:hidden; margin-bottom: 74px;">fivth</div>
     <div id="electronics">
         <h1>Electronics Device</h1>
         <button><a href="https://unacademy.com/class/edc-session-for-gate-and-ese-ee-and-ece-session-1/5V4SD14X" target="_blank">Lecture 1</a></button>
