--- a/index.html
+++ b/index.html
@@ -312,7 +312,34 @@
         <button><a href="https://www.youtube.com/watch?v=ZwflD5GzXJA&t=2789s" target="_blank">Lecture 41</a></button>
         <button><a href="https://www.youtube.com/watch?v=rbJVknnWlAo" target="_blank">Lecture 42</a></button>
         <button><a href="https://www.youtube.com/watch?v=hh8btRVfKTg" target="_blank">Lecture 43</a></button>
-    </div>
+        <button><a href="https://www.youtube.com/watch?v=hiKyijy8hbg&list=PLs5_Rtf2P2r5OL1cxbRGPWiH3QnAYb9g4&index=45" target="_blank">Lecture 44</a></button>
+        <button><a href="https://www.youtube.com/watch?v=KgLy8qa0Tm4&list=PLs5_Rtf2P2r5OL1cxbRGPWiH3QnAYb9g4&index=46" target="_blank">Lecture 45</a></button>
+        <button><a href="https://www.youtube.com/watch?v=j1Ddj470BEQ&list=PLs5_Rtf2P2r5OL1cxbRGPWiH3QnAYb9g4&index=47" target="_blank">Lecture 46</a></button>
+        <button><a href="https://www.youtube.com/watch?v=xqibLAkPAsY&list=PLs5_Rtf2P2r5OL1cxbRGPWiH3QnAYb9g4&index=48" target="_blank">Lecture 47</a></button>
+        <button><a href="https://www.youtube.com/watch?v=DO2dW5m2Crw&list=PLs5_Rtf2P2r5OL1cxbRGPWiH3QnAYb9g4&index=49" target="_blank">Lecture 48</a></button>
+        <button><a href="https://www.youtube.com/watch?v=H54lP_vUtvs&list=PLs5_Rtf2P2r5OL1cxbRGPWiH3QnAYb9g4&index=50" target="_blank">Lecture 49</a></button>
+        <button><a href="https://www.youtube.com/watch?v=lyZgvPgnxCo&list=PLs5_Rtf2P2r5OL1cxbRGPWiH3QnAYb9g4&index=51" target="_blank">Lecture 50</a></button>
+        <button><a href="https://www.youtube.com/watch?v=dNiK5A43jwQ&list=PLs5_Rtf2P2r5OL1cxbRGPWiH3QnAYb9g4&index=52" target="_blank">Lecture 51</a></button>
+        <button><a href="https://www.youtube.com/watch?v=d7RManyC8rU&list=PLs5_Rtf2P2r5OL1cxbRGPWiH3QnAYb9g4&index=53" target="_blank">Lecture 52</a></button>
+        <button><a href="https://www.youtube.com/watch?v=EqIZKDZqMbM&list=PLs5_Rtf2P2r5OL1cxbRGPWiH3QnAYb9g4&index=54" target="_blank">Lecture 52</a></button>
+        <button><a href="https://www.youtube.com/watch?v=3zHhp1jCRbg&list=PLs5_Rtf2P2r5OL1cxbRGPWiH3QnAYb9g4&index=55" target="_blank">Lecture 54</a></button>
+        <button><a href="https://www.youtube.com/watch?v=oNK0RZxkJGI&list=PLs5_Rtf2P2r5OL1cxbRGPWiH3QnAYb9g4&index=56" target="_blank">Lecture 55</a></button>
+        <button><a href="https://www.youtube.com/watch?v=CniXTKMKI20&list=PLs5_Rtf2P2r5OL1cxbRGPWiH3QnAYb9g4&index=57" target="_blank">Lecture 56</a></button>
+        <button><a href="https://www.youtube.com/watch?v=DBlWD8BL1cA&list=PLs5_Rtf2P2r5OL1cxbRGPWiH3QnAYb9g4&index=58" target="_blank">Lecture 57</a></button>
+        <button><a href="https://www.youtube.com/watch?v=V7X_1n_yJRc&list=PLs5_Rtf2P2r5OL1cxbRGPWiH3QnAYb9g4&index=59" target="_blank">Lecture 58</a></button>
+        <button><a href="https://www.youtube.com/watch?v=UuSVcgJWPGs&list=PLs5_Rtf2P2r5OL1cxbRGPWiH3QnAYb9g4&index=60" target="_blank">Lecture 59</a></button>
+        <button><a href="https://www.youtube.com/watch?v=lO50Xu9qlow&list=PLs5_Rtf2P2r5OL1cxbRGPWiH3QnAYb9g4&index=61" target="_blank">Lecture 60</a></button>
+        <button><a href="https://www.youtube.com/watch?v=_77aKFIopL0&list=PLs5_Rtf2P2r5OL1cxbRGPWiH3QnAYb9g4&index=62" target="_blank">Lecture 61</a></button>
+        <button><a href="https://www.youtube.com/watch?v=i51D8u8H71A&list=PLs5_Rtf2P2r5OL1cxbRGPWiH3QnAYb9g4&index=63" target="_blank">Lecture 62</a></button>
+        <button><a href="https://www.youtube.com/watch?v=LkLcg1dLaFY&list=PLs5_Rtf2P2r5OL1cxbRGPWiH3QnAYb9g4&index=64" target="_blank">Lecture 63</a></button>
+        <button><a href="https://www.youtube.com/watch?v=a2BL5_dfFME&list=PLs5_Rtf2P2r5OL1cxbRGPWiH3QnAYb9g4&index=65" target="_blank">Lecture 64</a></button>
+        <button><a href="https://www.youtube.com/watch?v=PQaMG8elsHM&list=PLs5_Rtf2P2r5OL1cxbRGPWiH3QnAYb9g4&index=66" target="_blank">Lecture 65</a></button>
+        <button><a href="" target="_blank">Lecture 66</a></button>
+        <button><a href="" target="_blank">Lecture 67</a></button>
+        <button><a href="" target="_blank">Lecture 68</a></button>
+        <button><a href="" target="_blank">Lecture 69</a></button>
+        <button><a href="" target="_blank">Lecture 70</a></button>
+</div>
     <!-- Network theory -->
     <div id="third" style="visibility:hidden; margin-bottom: 74px;">third</div>
     <div id="network">
