--- a/electronics_device.html
+++ b/electronics_device.html
@@ -23,6 +23,11 @@
     <div id="fivth" style="visibility:hidden; margin-bottom: 74px;">fivth</div>
     <div id="electronics">
             <h1>Electronics Device</h1>
+
+            <div class="workbook">
+                <button><a href="workbook/electronic_device/electronics_workbook.html" target="_blank">WorkBook</a></button>
+        </div>
+
             <button><a href="https://unacademy.com/class/edc-session-for-gate-and-ese-ee-and-ece-session-1/5V4SD14X"
                             target="_blank">Lecture 1</a></button>
             <button><a href="https://unacademy.com/class/edc-session-for-gate-and-ese-ee-and-ece-session-2/3DR7BIDH"
