--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
         <div id="first" style="visibility: hidden;">first</div>
         <div id="analog">
                 <h1>Analog Electronics</h1>
-
+                <div class="workbook">
+                        <button><a href="workbook/analog/analog_workbook01.html" target="_blank">WorkBook01</a></button>
+                        <button><a href="workbook/analog/analog_workbook02.html" target="_blank">WorkBook02</a></button>
+                        <button><a href="workbook/analog/analog_workbook03.html" target="_blank">WorkBook03</a></button>
+                </div>
                 <button><a href="https://unacademy.com/plus/course/analog-electronics-complete-for-ece-and-ee-gate-and-ese-session-1/07PV4OHP"
                                 target="_blank">Lecture 1</a></button>
                 <button><a href="https://unacademy.com/plus/course/analog-electronics-complete-for-ece-and-ee-gate-and-ese-session-2/ZRB0Q4YX"
