--- a/index.html
+++ b/index.html
@@ -82,22 +82,49 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 </div>
 
 <!-- Second Grid -->
-<!-- <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+ <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-third w3-center">
       <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
     </div>
 
     <div class="w3-twothird">
-      <h1>Lorem Ipsum</h1>
-      <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+      <h1>Success</h1>
+     <-- <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5> -->
 
-      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p class="w3-text-grey">If you want a thing bad enough<br>
+To go out and fight for it,<br>
+Work day and night for it,<br>
+Give up your time and your peace and your sleep for it<br>
+
+If only desire of it<br>
+Makes you quite mad enough<br>
+Never to tire of it,<br>
+Makes you hold all other things tawdry and cheap for it<br>
+
+If life seems all empty and useless without it<br>
+And all that you scheme and you dream is about it,<br>
+
+If gladly you'll sweat for it,<br>
+Fret for it,<br>
+Plan for it,<br>
+Lose all your terror of God or man for it,<br>
+
+If you'll simply go after that thing that you want.<br>
+With all your capacity,<br>
+Strength and sagacity,<br>
+Faith, hope and confidence, stern pertinacity,<br>
+
+If neither cold poverty, famished and gaunt,<br>
+Nor sickness nor pain<br>
+Of body or brain<br>
+Can turn you away from the thing that you want,<br>
+
+If dogged and grim you besiege and beset it,<br>
+You'll get it!”</p>
     </div>
   </div>
-</div> -->
+</div> 
 
 <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
     <h1 class="w3-margin w3-xlarge">Quote of the day: Work on you, for you</h1>
